# axum-seaorm-todo

./: Cargo.toml  Makefile  docker-compose.yml
docker/app/: Dockerfile  Dockerfile.dev
docker/mysql/: my.cnf
docker/mysqldef/: Dockerfile
schema/: schema.sql
src/: main.rs
src/entity/: mod.rs  prelude.rs  todos.rs
src/handler/: auth.rs  todo.rs
src/openapi/todo/: Cargo.toml  README.md
src/openapi/todo/.openapi-generator/: FILES
src/openapi/todo/docs/: ApiError.md  PostTodoRequest.md  PostTodoResponse.md  Todo.md  TodoResponse.md  TodosApi.md
src/openapi/todo/src/apis/: configuration.rs  mod.rs  todos_api.rs
src/openapi/todo/src/models/: api_error.rs  mod.rs  post_todo_request.rs  post_todo_response.rs  todo.rs  todo_response.rs
